--- a/css home page.css
+++ b/css home page.css
@@ -167,7 +167,7 @@ li a{
 }
 
 #section-d .box-5{
-	background-image: url("../Pictures used in website/Pictures for Title Page Background/Cloud Computing Blue.jpg");
+	background-image: url("../Pictures used in website/random clouds.jpg");
 	background-size: cover;
 	width: 33%;
 }
