Update css home page.css

--- a/css home page.css
+++ b/css home page.css
@@ -180,7 +180,7 @@ li a{
 }
 
 #section-e .box-7{
-	background-image: url("../Pictures used in website/Pictures for Title Page Background/Background for Title Page.jfif");
+	background-image: url("../Pictures used in website/Pictures for Title Page Background/Virtual Reality Picture.jpg");
 	background-size: cover;
 	width: 50%;
 }
