--- a/css home page.css
+++ b/css home page.css
@@ -162,7 +162,7 @@ li a{
 }
 
 #section-d .box-4{
-	background-image: url("../../wedsite steelas/pictures/ACTUAL CLOUD BACKGROUND THE END.jpg");
+	background-image: url(https://github.com/stpatsa/stpatsa.github.io/blob/master/Pictures%20used%20in%20website/Pictures%20for%20Title%20Page%20Background/Background%20for%20Title%20Page.jfif);
 	background-size: cover;
 	width: 33%;
 }
