--- a/css home page.css
+++ b/css home page.css
@@ -162,7 +162,7 @@ li a{
 }
 
 #section-d .box-4{
-	background-image: url(ACUTAL CLOUD BACKGROUND THE END.jpg);
+	background-image: url("ACUTAL CLOUD BACKGROUND THE END.jpg");
 	background-size: cover;
 	width: 33%;
 }
