Update css home page.css

--- a/css home page.css
+++ b/css home page.css
@@ -162,7 +162,7 @@ li a{
 }
 
 #section-d .box-4{
-	background-image: url("stpatsa.github.io/actualcloudbackground.jpg");
+	background-image: url("../actualcloudbackground.jpg");
 	background-size: cover;
 	width: 33%;
 }
