Update css home page.css

--- a/STPA/Home Page/css home page.css
+++ b/STPA/Home Page/css home page.css
@@ -161,7 +161,7 @@ li a{
 }
 
 #section-d .box-4{
-	background-image: url("../../wedsite steelas/pictures/ACTUAL CLOUD BACKGROUND THE END.jpg");
+	background-image: url("../actualcloudbackground.jpg");
 	background-size: cover;
 	width: 33%;
 }
