Update css home page.css

--- a/css home page.css
+++ b/css home page.css
@@ -165,6 +165,7 @@ li a{
 	background-image: url("../ACTUAL CLOUD BACKGROUND THE END.jpg");
 	background-size: cover;
 	width: 33%;
+	color:#295D9B;
 }
 
 #section-d .box-5{
