--- a/css home page.css
+++ b/css home page.css
@@ -162,7 +162,7 @@ li a{
 }
 
 #section-d .box-4{
-	background-image: url("../ACTUAL CLOUD BACKGROUND THE END.jpg");
+	background-color: #295D9B;
 	background-size: cover;
 	width: 33%;
 }
