Update css home page.css

--- a/css home page.css
+++ b/css home page.css
@@ -130,7 +130,7 @@ li a{
 	color: #295D9B;
 }
 
-#section-d .box-4, #section-d .box-5, #section-d .box-6{
+ #section-d .box-5, #section-d .box-6{
 	background: #f9f9f9;
 	color: #295D9B;
 	
@@ -160,6 +160,7 @@ li a{
 	background-size: cover;
 	width:33%;
 }
+
 
 
 #section-d .box-5{
