--- a/STPA/Home Page/css home page.css
+++ b/STPA/Home Page/css home page.css
@@ -161,7 +161,7 @@ li a{
 }
 
 #section-d .box-4{
-	background-image: url("../actualcloudbackground.jpg");
+	background-image: url("../Pictures used in website/Pictures for Title Page Background/Cloud Computing.jpg");
 	background-size: cover;
 	width: 33%;
 }
